syntax = "proto3";

package examplepb;

option go_package = "github.com/018bf/example/pkg/examplepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message ArchCreate {
  string name = 1;
  google.protobuf.Timestamp release = 2;
  google.protobuf.Timestamp tested = 3;
}

message ArchGet {
  string id = 1;
}

message ArchUpdate {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.Timestamp release = 3;
  google.protobuf.Timestamp tested = 4;
}

message Arch {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string name = 4;
  google.protobuf.Timestamp release = 5;
  google.protobuf.Timestamp tested = 6;
}

message ListArch {
  repeated Arch items = 1;
  uint64 count = 2;
}

message ArchDelete {
  string id = 1;
}

message ArchFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service ArchService {
  rpc Create(examplepb.ArchCreate) returns (examplepb.Arch);
  rpc Get(examplepb.ArchGet) returns (examplepb.Arch);
  rpc Update(examplepb.ArchUpdate) returns (examplepb.Arch);
  rpc Delete(examplepb.ArchDelete) returns (google.protobuf.Empty);
  rpc List(examplepb.ArchFilter) returns (examplepb.ListArch);
}